<resources>
    <string name="app_name">BIA</string>
    <string name="product_logo">Product Logo</string>
    <string name="authorisation_phone_title_text">Добро пожаловать в БИА.Помощник логиста</string>
    <string name="enter_phone_number_string">Введите свой номер для авторизации</string>
    <string name="next">Продолжить</string>
    <string name="enter_code_title_string">Введите код из смс</string>
    <string name="code_sent_string">Код был отправлен на номер телефона \n%s</string>
    <string name="resend_code_string">Выслать повторный код</string>
    <string name="back_icon_description">Back icon</string>
    <string name="code_mask_hint">_ _ _ _ _ _</string>
    <string name="phone_number_hint">+7 (999) 000 - 00 - 00</string>
    <string name="menu_task_title">Задания</string>
    <string name="menu_graphics_title">Графики</string>
    <string name="menu_chat_title">Чат</string>
    <string name="menu_profile_title">Профиль</string>
    <string name="current_task_title">Текущее задание</string>
    <string name="task_details_title">Детали заказа</string>
    <string name="detail_payment_string">Параметры по оплате</string>
    <string name="task_fragment_title">Задания</string>
    <string name="check_details_button">Посмотреть детали</string>
    <string name="task_detail_string">Детали задания</string>
    <string name="type">Тип груза</string>
    <string name="city_title_string">Город исполнения</string>
    <string name="order_date_string">Дата заказа</string>
    <string name="order_time">Время прибытия</string>
    <string name="start_order_point_title">Начальная точка маршрута</string>
    <string name="end_order_point_title">Конечная точка маршрута</string>
    <string name="body_type_string">Тип кузова</string>
    <string name="contacts">Контакты</string>
    <string name="client_rules_string">Правила клиента</string>
    <string name="download_string">Скачать</string>
    <string name="incident_string">Инцидент</string>
    <string name="error_string">Ошибка</string>
    <string name="attach_documents_button">Прикрепить документы</string>
    <string name="finish_order_string">Завершить заказ</string>
    <string name="refuse_order_string">Отказаться от задания</string>
    <string name="rules_for_finish_order_string">Для завершения заказа необходимо прикрепить документы</string>
    <string name="documents_string">Документы</string>
    <string name="for_finish_order_title">Для завершения заказа необходимо прикрепить документы</string>
    <string name="add_photo">Добавить фото</string>
    <string name="read_permission_denied_string">Для выполнения необходимо разрешить доступ к хранилищу</string>
    <string name="choose_incident_string">Выберите что произошло</string>
    <string name="problem_address">Проблема на адресате</string>
    <string name="problem_way">Проблема в пути</string>
    <string name="problem_loading">Проблема на загрузке</string>
    <string name="save_string">Сохранить</string>
    <string name="profile_title_string">Профиль</string>
    <string name="personnel_number_string">Табельный №</string>
    <string name="phone_number_string">Номер телефона</string>
    <string name="citizenship_string">Гражданство</string>
    <string name="car_string">Машина</string>
    <string name="car_number_string">Номера</string>
    <string name="sick_leave_string">Больничный лист</string>
    <string name="notifications_string">Оповещения</string>
    <string name="exit_string">Выйти</string>
    <string name="work_finished_string">Работа выполнена</string>
    <string name="work_finished_title">Задание было успешно выполнено</string>
    <string name="schedule_string">График смен</string>
    <string name="avatar">avatar</string>
</resources>