<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_task"
        android:icon="@drawable/menu_task_item"
        android:title="@string/menu_task_title"
        app:itemTextAppearance="@style/BottomNavMenuTextStyle"/>

    <item
        android:id="@+id/menu_item_graphics"
        android:icon="@drawable/menu_graphics_item"
        android:title="@string/menu_graphics_title"
        app:itemTextAppearance="@style/BottomNavMenuTextStyle"/>

    <item
        android:id="@+id/menu_item_chat"
        android:icon="@drawable/menu_chat_item"
        android:title="@string/menu_chat_title"
        app:itemTextAppearance="@style/BottomNavMenuTextStyle"/>

    <item
        android:id="@+id/menu_item_profile"
        android:icon="@drawable/menu_profile_item"
        android:title="@string/menu_profile_title"
        app:itemTextAppearance="@style/BottomNavMenuTextStyle"/>
</menu>