<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/authorisation_product_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_logo"
        android:src="@drawable/authorisation_product_logo"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/authorisation_phone_title_text"
        android:textColor="@color/dark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorisation_product_logo"
        android:layout_marginTop="76dp"/>

    <TextView
        android:id="@+id/enter_phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/stolzl_book"
        android:text="@string/enter_phone_number_string"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/maskEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/stolzl_regular"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_number_tv"
        app:mask="+7 (###) ### - ## - ##" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Widget.AppTheme.MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:enabled="false"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/next"
        android:textSize="14sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maskEditText"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>