<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <ImageView
        android:id="@+id/authorisation_product_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_logo"
        android:src="@drawable/authorisation_product_logo"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:id="@+id/back_icon_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorisation_product_logo"
        android:contentDescription="@string/back_icon_description" />

    <TextView
        android:id="@+id/enter_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/enter_code_title_string"
        android:textColor="@color/dark"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/back_icon_button"
        app:layout_constraintBottom_toBottomOf="@id/back_icon_button"
        app:layout_constraintTop_toTopOf="@+id/back_icon_button"/>

    <TextView
        android:id="@+id/code_sent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/stolzl_book"
        android:text="@string/code_sent_string"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_code_title" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/maskEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/stolzl_regular"
        android:hint="@string/code_mask_hint"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_sent_title"
        app:mask="# # # # # #"
        android:gravity="center"/>

    <TextView
        android:id="@+id/resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/maskEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/middle_gray"
        android:textSize="14sp"
        android:fontFamily="@font/stolzl_book"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Widget.AppTheme.MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:enabled="false"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/next"
        android:textSize="14sp"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maskEditText"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>