<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/incident_string"
        app:titleTextAppearance="@style/FragmentTitleTextStyle"
        android:background="@color/white" />

    <TextView
        android:id="@+id/for_finish_order_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/choose_incident_string"
        android:textSize="16sp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/stolzl_regular"
        android:layout_margin="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/for_finish_order_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp">

        <RadioGroup
            android:id="@+id/incident_choose_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RadioButton
                android:id="@+id/choose_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_address"
                android:textSize="14sp"
                android:fontFamily="@font/stolzl_book"
                android:textColor="@color/dark_gray"/>

            <RadioButton
                android:id="@+id/choose_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_way"
                android:textSize="14sp"
                android:fontFamily="@font/stolzl_book"
                android:textColor="@color/dark_gray"/>

            <RadioButton
                android:id="@+id/choose_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/problem_loading"
                android:textSize="14sp"
                android:fontFamily="@font/stolzl_book"
                android:textColor="@color/dark_gray"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/OderDetailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/save_string"
        android:textAllCaps="false"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>