<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile_title_string"
        app:titleTextAppearance="@style/FragmentTitleTextStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_first_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_constraint_layout">

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/avatar" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/user_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Петров Иван Алексеевич"
                    android:textSize="16sp"
                    android:fontFamily="@font/stolzl_regular"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="12dp"/>

                <TextView
                    android:id="@+id/user_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/user_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="4dp"
                    tools:text="Водитель"
                    android:fontFamily="@font/stolzl_book"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginBottom="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/second_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_constraint_layout"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/personnel_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/personnel_number_string"
                    style="@style/ProfileTitleStyle"/>

                <TextView
                    android:id="@+id/personnel_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/personnel_number_title"
                    app:layout_constraintStart_toStartOf="@id/personnel_number_title"
                    style="@style/ProfileTextStyle"
                    android:layout_marginTop="4dp"
                    tools:text="1111"/>

                <TextView
                    android:id="@+id/number_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/personnel_number"
                    app:layout_constraintStart_toStartOf="@id/personnel_number"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number_string"
                    style="@style/ProfileTitleStyle"/>

                <TextView
                    android:id="@+id/number_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/number_phone_title"
                    app:layout_constraintStart_toStartOf="@id/number_phone_title"
                    style="@style/ProfileTextStyle"
                    android:layout_marginTop="4dp"
                    tools:text="+7 987 654 3210"/>

                <TextView
                    android:id="@+id/citizenship_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/number_phone"
                    app:layout_constraintStart_toStartOf="@id/number_phone"
                    android:layout_marginTop="16dp"
                    android:text="@string/citizenship_string"
                    style="@style/ProfileTitleStyle"/>

                <TextView
                    android:id="@+id/citizenship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/citizenship_title"
                    app:layout_constraintStart_toStartOf="@id/citizenship_title"
                    style="@style/ProfileTextStyle"
                    android:layout_marginTop="4dp"
                    tools:text="РФ"/>

                <TextView
                    android:id="@+id/type_car_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/citizenship"
                    app:layout_constraintStart_toStartOf="@id/citizenship"
                    android:layout_marginTop="16dp"
                    android:text="@string/car_string"
                    style="@style/ProfileTitleStyle"/>

                <TextView
                    android:id="@+id/type_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/type_car_title"
                    app:layout_constraintStart_toStartOf="@id/type_car_title"
                    style="@style/ProfileTextStyle"
                    android:layout_marginTop="4dp"
                    tools:text="Грузовая"/>

                <TextView
                    android:id="@+id/car_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/type_car"
                    app:layout_constraintStart_toStartOf="@id/type_car"
                    android:layout_marginTop="16dp"
                    android:text="@string/car_number_string"
                    style="@style/ProfileTitleStyle"/>

                <TextView
                    android:id="@+id/car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/car_number_title"
                    app:layout_constraintStart_toStartOf="@id/car_number_title"
                    style="@style/ProfileTextStyle"
                    android:layout_marginTop="4dp"
                    tools:text="А 000 АА 199"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sick_leave_button"
                style="@style/OrderWhiteButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:text="@string/sick_leave_string"
                app:icon="@drawable/order_next_icon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notification_button"
                style="@style/OrderWhiteButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:text="@string/notifications_string"
                app:icon="@drawable/order_next_icon"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                style="@style/OrderWhiteButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:text="@string/exit_string"
                app:icon="@drawable/order_next_icon"
                android:textColor="@color/red"
                app:iconTint="@color/red"/>
        </LinearLayout>


    </ScrollView>




</LinearLayout>